prod-deployment/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: grafana-ui
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: grafana.techsolution.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
  tls:
  - hosts:
    - grafana.techsolution.sa
    secretName: health.tech.solution.com
