prod-deployment/monitoring/promethes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: prometheus-ui
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: prometheus.techsolution.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 8080
  tls:
  - hosts:
    - prometheus.techsolution.sa
    secretName: health.tech.solution.com
